--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
+<html>
+  <head>
+    <title>Just Shower Thoughts</title>
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <meta name="author" content="Shreyas Lad">
+    <meta charset="utf-8">
+    <meta name="description" content="Just shower thoughts derived from just-shower-thoughts.tumblr.com">
+  </head>
+<body>
+  <script>
 
+var r_text = new Array (); 
+r_text[0] = "I have never slipped pver on a wet floor but I have, on several occasions, tripped over a 'wet floor' sign."; 
+r_text[1] = "The fact that there is a D in Fridge, and not in Refrigerator has bothered me for years..."; 
+r_text[2] = "The older I get the more I realize how offensive, entitled, and narcissive I was when I was younger."; 
+r_text[3] = "The tooth fairy teaches children how lucrative selling your body can be."; 
+r_text[4] = "The most iconic villain in Indiana Jones is a large rock."; 
+r_text[5] = "Doctors are just vets that can only work on one animal.";
+r_text[6] = "Eventually, somebody will write a term paper titled, 'The Dank Meme', culture of the early 21st century.";
+r_text[7] = "I hate to be moderately interested in a link, clicking it and it takes longer than expected to load. Do I wait. Do I go back? ";
+r_text[8] = "Technically, I'm 50% centaur.";
+r_text[9] = "I carry around an EpiPen to protect me from my body trying to protect me";
+r_text[10] = "If you really think about it, the Wright Brothers are responsible for 9/11..";
+
+var i = Math.floor(r_text.length * Math.random()); 
+
+document.write("<br /><br /><br /><br /><br /><br /><br /><center><FONT SIZE=72><FONT COLOR='#FFFFFF'>" + 
+r_text[i]  + "</FONT></center><br />"); 
+
+var bgcolorlist=new Array("#228B22", "#FFD700", "#ADFF2F", "#FF69B4", "#CD5C5C", "#4B0082", "#7CFC00", "#ADD8E6", "#E84643", "#ED0A07", "#EA2907", "#E5294B", "#E00D26", "#FF3030", "#FC7500", "#F95700", "#F43900", "#F95620") 
+
+document.body.style.background=bgcolorlist[Math.floor(Math.random()*bgcolorlist.length)]; 
+
+  </script>
+    <br>
+    <br> 
+    <br> 
+    <br>
+    <center><h6><i>Reload the page..</i></h6></center> 
+    <style> 
+
+       body,td,th { 
+        color: #000; 
+        font-family: 'Quicksand' , sans-serif; 
+  </style>
+</body>
+</html> 
