Link stylesheet and write anchor

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <meta name="author" content="Shreyas Lad">
     <meta charset="utf-8">
-    <meta name="description" content="Just shower thoughts derived from just-shower-thoughts.tumblr.com">
+    <meta name="description" content="Shower thoughts derived from just-shower-thoughts.tumblr.com">
+    <link rel="stylesheet" href="style.css">
   </head>
 <body>
   <script>
@@ -36,7 +37,7 @@ document.body.style.background=bgcolorlist[Math.floor(Math.random()*bgcolorlist.
     <br> 
     <br> 
     <br>
-    <center><h6><i>Reload the page..</i></h6></center> 
+  <center><h6><i><a href="just-shower-thoughts.ml" class="link">Click to reload</a></i></h6></center> 
     <style> 
 
        body,td,th { 
