--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   </head>
 <body>
   <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-92824653-1', 'auto');
+  ga('send', 'pageview');
 
 var r_text = new Array (); 
 r_text[0] = "I have never slipped pver on a wet floor but I have, on several occasions, tripped over a 'wet floor' sign."; 
