--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Just Shower Thoughts</title>
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <link rel="favicon" href="showa.png">
     <meta name="author" content="Shreyas Lad">
     <meta charset="utf-8">
     <meta name="description" content="Shower thoughts derived from just-shower-thoughts.tumblr.com">
