--- a/index.html
+++ b/index.html
@@ -21,17 +21,21 @@
   ga('send', 'pageview');
 
 var r_text = new Array (); 
-r_text[0] = "I have never slipped pver on a wet floor but I have, on several occasions, tripped over a 'wet floor' sign."; 
-r_text[1] = "The fact that there is a D in Fridge, and not in Refrigerator has bothered me for years..."; 
-r_text[2] = "The older I get the more I realize how offensive, entitled, and narcissive I was when I was younger."; 
-r_text[3] = "The tooth fairy teaches children how lucrative selling your body can be."; 
-r_text[4] = "The most iconic villain in Indiana Jones is a large rock."; 
-r_text[5] = "Doctors are just vets that can only work on one animal.";
-r_text[6] = "Eventually, somebody will write a term paper titled, 'The Dank Meme', culture of the early 21st century.";
-r_text[7] = "I hate to be moderately interested in a link, clicking it and it takes longer than expected to load. Do I wait. Do I go back? ";
-r_text[8] = "Technically, I'm 50% centaur.";
-r_text[9] = "I carry around an EpiPen to protect me from my body trying to protect me";
-r_text[10] = "If you really think about it, the Wright Brothers are responsible for 9/11..";
+  r_text[0] = "I have never slipped pver on a wet floor but I have, on several occasions, tripped over a 'wet floor' sign."; 
+  r_text[1] = "The fact that there is a D in Fridge, and not in Refrigerator has bothered me for years..."; 
+  r_text[2] = "The older I get the more I realize how offensive, entitled, and narcissive I was when I was younger."; 
+  r_text[3] = "The tooth fairy teaches children how lucrative selling your body can be."; 
+  r_text[4] = "The most iconic villain in Indiana Jones is a large rock."; 
+  r_text[5] = "Doctors are just vets that can only work on one animal.";
+  r_text[6] = "Eventually, somebody will write a term paper titled, 'The Dank Meme', culture of the early 21st century.";
+  r_text[7] = "I hate to be moderately interested in a link, clicking it and it takes longer than expected to load. Do I wait. Do I go back? ";
+  r_text[8] = "Technically, I'm 50% centaur.";
+  r_text[9] = "I carry around an EpiPen to protect me from my body trying to protect me";
+  r_text[10] = "If you really think about it, the Wright Brothers are responsible for 9/11..";
+  r_text[11] = "I wonder how many decisions I've made in life that prevented my death";
+  r_text[12] = "All surveys are biased because they only contain people willing to participate in a survey.";
+  r_text[13] = "The address to congress would be more interesting if someone removed a chair every time people got up to clap.";
+  r_text[14] = "Butter is food lotion.";
 
 var i = Math.floor(r_text.length * Math.random()); 
 
