--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@ var r_text = new Array ();
   r_text[12] = "All surveys are biased because they only contain people willing to participate in a survey.";
   r_text[13] = "The address to congress would be more interesting if someone removed a chair every time people got up to clap.";
   r_text[14] = "Butter is food lotion.";
+  r_text[15] = "You can’t please everyone. You can only please yourself. But not in public, that’ll get you arrested.";
+  r_text[16] = "I’m suicidal, but i’m also a procrastinator… so it just kinda works out";
+  r_text[17] = "For worms, crossing a sidewalk is probably like crossing a desert.";
+  r_text[18] = "I will lay in bed all morning uncomfortably holding in pee to avoid being uncomfortable for two minutes to just get up and pee.";
+  r_text[19] = "Most people only want your opinion if it reinforces theirs.";
+  r_text[19] = "The roof of your mouth isn’t really a roof because it’s the underpart…it should be the ceiling of your mouth.";
+  r_text[20] = "No one has ever been inside an empty room.";
+  r_text[21] = "It’s annoying that when drinking hot chocolate, the marshmallows move away from my mouth but when drinking water the ice tries to force its way into my mouth.";
+  r_text[22] = "I really can’t understand how there is still a market for internet ads, any time I see one interfering at all with my browsing experience I automatically hate the company and their product.";
 
 var i = Math.floor(r_text.length * Math.random()); 
 
