--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   ga('create', 'UA-92824653-1', 'auto');
   ga('send', 'pageview');
 var r_text = new Array (); 
-  r_text[0] = "I have never slipped pver on a wet floor but I have, on several occasions, tripped over a 'wet floor' sign."; 
+  r_text[0] = "I have never slipped over on a wet floor but I have, on several occasions, tripped over a 'wet floor' sign."; 
   r_text[1] = "The fact that there is a D in Fridge, and not in Refrigerator has bothered me for years..."; 
   r_text[2] = "The older I get the more I realize how offensive, entitled, and narcissive I was when I was younger."; 
   r_text[3] = "The tooth fairy teaches children how lucrative selling your body can be."; 
@@ -36,11 +36,11 @@ var r_text = new Array ();
   r_text[13] = "The address to congress would be more interesting if someone removed a chair every time people got up to clap.";
   r_text[14] = "Butter is food lotion.";
   r_text[15] = "You can’t please everyone. You can only please yourself. But not in public, that’ll get you arrested.";
-  r_text[16] = "I’m suicidal, but i’m also a procrastinator… so it just kinda works out";
+  r_text[16] = "I’m suicidal, but I’m also a procrastinator… so it just kinda works out";
   r_text[17] = "For worms, crossing a sidewalk is probably like crossing a desert.";
   r_text[18] = "I will lay in bed all morning uncomfortably holding in pee to avoid being uncomfortable for two minutes to just get up and pee.";
   r_text[19] = "Most people only want your opinion if it reinforces theirs.";
-  r_text[19] = "The roof of your mouth isn’t really a roof because it’s the underpart…it should be the ceiling of your mouth.";
+  r_text[19] = "The roof of your mouth isn’t really a roof because it’s the underpart… it should be the ceiling of your mouth.";
   r_text[20] = "No one has ever been inside an empty room.";
   r_text[21] = "It’s annoying that when drinking hot chocolate, the marshmallows move away from my mouth but when drinking water the ice tries to force its way into my mouth.";
   r_text[22] = "I really can’t understand how there is still a market for internet ads, any time I see one interfering at all with my browsing experience I automatically hate the company and their product.";
