One more thought

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@ var r_text = new Array ();
   r_text[20] = "No one has ever been inside an empty room.";
   r_text[21] = "It’s annoying that when drinking hot chocolate, the marshmallows move away from my mouth but when drinking water the ice tries to force its way into my mouth.";
   r_text[22] = "I really can’t understand how there is still a market for internet ads, any time I see one interfering at all with my browsing experience I automatically hate the company and their product.";
-
+  r_text[23] = "People put cameras everywhere, even in their fridges.";
+    
 var i = Math.floor(r_text.length * Math.random()); 
 
 document.write("<br /><br /><br /><br /><br /><br /><br /><center><FONT SIZE=72><FONT COLOR='#FFFFFF'>" + 
