--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@ var r_text = new Array ();
   r_text[21] = "It’s annoying that when drinking hot chocolate, the marshmallows move away from my mouth but when drinking water the ice tries to force its way into my mouth.";
   r_text[22] = "I really can’t understand how there is still a market for internet ads, any time I see one interfering at all with my browsing experience I automatically hate the company and their product.";
   r_text[23] = "People put cameras everywhere, even in their fridges.";
+  r_text[24] = "In Roman numerals, XL is smaller than L.";
+  r_text[25] = "Saying there are no aliens in the universe is like scooping a cup of water out of the ocean and saying there is no fish.";
+  r_text[26] = "They should've named the iPhone's battery, \"Apple Juice \" ";
+  r_text[27] = "I can’t believe a James Bond film didn’t come out in 2007..";
+  r_text[28] = "Baby turtles must get so disappointed. All that work trying to break through their shell, and they’re still in one.";
     
 var i = Math.floor(r_text.length * Math.random()); 
 
