--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@ var r_text = new Array ();
   r_text[26] = "They should've named the iPhone's battery, \"Apple Juice \" ";
   r_text[27] = "I can’t believe a James Bond film didn’t come out in 2007..";
   r_text[28] = "Baby turtles must get so disappointed. All that work trying to break through their shell, and they’re still in one.";
+  r_text[29] = "The only reason I'm great at keeping secrets is because secretly I don’t care about your secret .-.";
+  r_text[30] = "The worst part about having a good hiding spot is not being able to tell anyone how clever you think it is...";
+  r_text[31] = "Finding a needle in a haystack isn't that hard. Just light it on fire and filter the ashes. Simple.";
+  r_text[32] = "Speeding tickets are just delayed micro transactions for a speed boost.";
     
 var i = Math.floor(r_text.length * Math.random()); 
 
