--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@ var r_text = new Array ();
   r_text[30] = "The worst part about having a good hiding spot is not being able to tell anyone how clever you think it is...";
   r_text[31] = "Finding a needle in a haystack isn't that hard. Just light it on fire and filter the ashes. Simple.";
   r_text[32] = "Speeding tickets are just delayed micro transactions for a speed boost.";
+  r_text[33] = "People probably watch the /“You can skip this ad in X seconds/” timer more than the actual ad.";
+  r_text[34] = "People probably watch the “you can skip this ad in X seconds” timer more than the actual ad.";
+  r_text[35] = "Bricks are just domesticated rocks.";
+  r_text[36] = "What if oxygen makes our voice deeper and helium brings it back to normal.";
+  r_text[37] = "Dancers use 5,6,7,and 8 because musicians already took 1,2,3,4.";
     
 var i = Math.floor(r_text.length * Math.random()); 
 
